--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 $( "form" ).on( "submit", function( event ) {
                     event.preventDefault();
                     console.log("adding a line #2");
+                    console.log("adding a line #3");
                     console.log( $( this ).serialize() );
                 });
             });
