--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        
+        <h2> GR Adds a line from his laptop</h2>
         <form>
             <section>
                 <input type='text' id='fname_1' name='fname_1' value='James'/>
