edited index and style
conflict line in index.html.
Changed body to blue in style.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        
+        <h1>GR adds line in Desktop</h1>
         <form>
             <section>
                 <input type='text' id='fname_1' name='fname_1' value='James'/>
