--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     </head>
     
     <body>
-<<<<<<< HEAD
-        <h1>GR adds line in Desktop</h1>
-=======
-        <h2> GR Adds a line from his laptop</h2>
->>>>>>> refs/remotes/origin/master
+        <h2>GR removes some lines from head of index, cleaning everything up</h3>
         <form>
             <section>
                 <input type='text' id='fname_1' name='fname_1' value='James'/>
